# pes-gameplay-editor

./: .gitignore  README.md  editor.py  pyproject.toml
pes_ai/eighteen/: match.py  player.py  team.py
pes_ai/mappings/18/match/: inplayDemo.txt
pes_ai/mappings/18/player/: freekick.txt
pes_ai/mappings/18/team/: basePosition.txt  pullAway.txt  spaceRun.txt  subConcept.txt
